# ticket-tune

./: .env.example  .gitignore  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  public-export-manifest.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: apple-silicon.yaml  cpu-smoke.yaml  llama-8b-qlora.yaml  qwen-0.5b-candidate-local.yaml  qwen-0.5b-lora-local.yaml  qwen-7b-qlora-quality.yaml  qwen-7b-qlora.yaml  smoke.yaml
data/qualified/: review-manifest.example.json
data/raw/: support_tickets.jsonl
deploy/examples/: chat.py  health.py
deploy/ollama/: Modelfile.template  README.md
deploy/vllm/: .env.example  compose.yaml
deploy/vllm/production/: .env.example  README.md  alertmanager.yml  alerts.yml  compose.yaml  nginx.conf  prometheus.yml  release-manifest.example.json  vllm-entrypoint.py
docs/: README.md  architecture.md  customize.md  dataset-card.md  deployment.md  evaluation.md  getting-started.md  portfolio-demo.md  qualification.md  references.md  security.md  training.md
docs/data/: 2026-07-17-dataset-manifest-chain.md
docs/deployment/: 2026-07-17-deployment-integrity.md
docs/operations/: cuda-qualification-runbook.md
docs/project/: 2026-07-17-ticket-tune-completion.md  2026-07-18-open-source-adoption-completion.md  2026-07-18-qualified-data-local-quality-public-release-completion.md  2026-07-18-qualified-pipeline-completion.md  2026-07-18-qwen-05b-parity-cuda-rehearsal-completion.md
results/cpu-smoke/: README.md  deployment-summary.json  evaluation-summary.json  ollama-constrained-response.json  training-summary.json
results/post-commit-cpu/: README.md  evaluation-summary.json  merge-parity-summary.json  training-summary.json
results/qualified-candidate/: README.md  automated-audit-a.json  automated-audit-b.json  cuda-vllm-fallback-summary.json  evaluation-summary.json  merge-parity-summary.json  training-summary.json
results/qwen-0.5b-local/: README.md  evaluation-summary.json  merge-parity-summary.json  training-summary.json
results/readiness/: README.md  cuda-contract-rehearsal-summary.json  cuda-target-audit.json
scripts/: build_public_export.py  scan_secrets.py  verify_wheel_install.py
src/tickettune/: __init__.py  __main__.py  cli.py  config.py  cuda_rehearsal.py  data.py  deployment_proof.py  evaluation.py  export.py  generation.py  hardware.py  onboarding.py  parity.py  prompts.py  public_export.py  qualification.py  review_packets.py  run_manifest.py  schemas.py  secret_scan.py  strict_json.py  synthetic.py  training.py
src/tickettune/starter/: PROJECT_README.md  __init__.py  gitignore.txt
tests/: test_cli.py  test_config.py  test_cuda_rehearsal.py  test_data.py  test_deployment_proof.py  test_evaluation.py  test_export.py  test_hardware.py  test_onboarding.py  test_package.py  test_parity.py  test_production_deployment.py  test_public_export.py  test_qualification.py  test_schemas.py  test_secret_scan.py  test_synthetic.py  test_training.py  test_training_stack_contract.py
tests/fixtures/: predictions.jsonl  predictions_pass.jsonl  tickets.jsonl
tests/fixtures/adapter/: adapter_config.json
tests/fixtures/merged/: config.json  model.safetensors  tickettune-merge-provenance.json
